--- a/app/src/styles/main.css
+++ b/app/src/styles/main.css
@@ -1,3 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-   @apply m-0 p-0;
+	@apply m-0 p-0;
+}
+
+button,
+a.btn {
+	@apply p-2 bg-gray-300 rounded-md font-semibold text-center;
+
+	&:hover {
+		@apply bg-gray-400;
+	}
+}
+
+input {
+	@apply bg-gray-100 rounded p-1 border-b border-blue-500;
 }
