--- a/app/src/styles/main.css
+++ b/app/src/styles/main.css
@@ -1,20 +1,21 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-body {
-	@apply m-0 p-0;
+html {
+	cursor: none;
 }
-
-button,
-a.btn {
-	@apply p-2 bg-gray-300 rounded-md font-semibold text-center;
-
-	&:hover {
-		@apply bg-gray-400;
-	}
+a {
+	cursor: none;
+}
+button {
+	cursor: none;
 }
 
 input {
-	@apply bg-gray-100 rounded p-1 border-b border-blue-500;
+	@apply bg-tan rounded p-1 border-b border-salomon;
+}
+
+html {
+	font-size: 20px;
+}
+
+body {
+	@apply font-sans font-bold bg-white;
 }
